--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity
             android:name=".ui.onboarding.OnboardingActivity"
             android:theme="@style/FullscreenTheme" />
+        <activity android:name=".ui.auth.signup.PhoneVerification" />
 
         <service android:name=".data.network.MyFirebaseMessagingService">
             <intent-filter>
