--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation "com.google.firebase:firebase-firestore:$firebase_firestore_version"
     implementation "com.google.firebase:firebase-analytics:$firebase_analytics_version"
     implementation 'com.google.guava:guava:27.0.1-android'
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.1'
 
     def room_version = '2.2.5'
     def work_version = '2.3.4'
