Refactored project for multi-flavor app build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,16 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
         sourceCompatibility JavaVersion.VERSION_1_8
     }
+    flavorDimensions "client"
+    productFlavors {
+        general {
+            applicationIdSuffix = ".general"
+        }
+
+        doctors {
+            applicationIdSuffix = ".doctors"
+        }
+    }
 }
 
 dependencies {
