--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'io.fabric'
 
@@ -27,6 +28,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
         sourceCompatibility JavaVersion.VERSION_1_8
     }
+
+    dataBinding{
+        enabled = true
+    }
 }
 
 dependencies {
@@ -36,17 +41,18 @@ dependencies {
     def cardview_version = '1.0.0-beta01'
     def constraint_layout_version = '1.1.3'
     def material_version = '1.2.0-alpha06'
-    def recyclerview_version = '1.2.0-alpha02'
+    def recyclerview_version = '1.2.0-alpha03'
     def junit_version = "4.12"
     def test_runner_version = '1.1.0'
     def espresso_core_version = '3.1.1'
+    def fragment_version = '2.2.2'
 
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
     implementation "com.google.android.material:material:$material_version"
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
     implementation "androidx.cardview:cardview:$cardview_version"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$test_runner_version"
@@ -54,11 +60,11 @@ dependencies {
 
     // Firebase Dependencies
 
-    def firebase_analytics_version = '17.4.0'
+    def firebase_analytics_version = '17.4.1'
     def firebase_auth_version = '19.3.1'
     def firebase_storage_version = '19.1.1'
     def crashlytics_version = '2.10.1'
-    def firebase_messaging_version = '20.1.6'
+    def firebase_messaging_version = '20.1.7'
     def firebase_functions_version = '19.0.2'
     def firebase_firestore_version = '21.4.3'
 
@@ -103,19 +109,32 @@ dependencies {
     implementation 'com.github.yalantis:ucrop:2.2.3'
 
     // Glide for image loading
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
     // zoom imageview
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation "androidx.core:core-ktx:1.2.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    def nav_version = "2.3.0-beta01"
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Dynamic Feature Module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
+    // Testing Navigation
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
 }
 
 apply plugin: 'com.google.gms.google-services'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 repositories {
     mavenCentral()
 }
