--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.3.72'
     repositories {
         maven {
             url 'https://maven.fabric.io/public'
@@ -13,8 +13,11 @@ buildscript {
         
     }
     dependencies {
+        def nav_version = "2.3.0-beta01"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
         classpath 'com.android.tools.build:gradle:3.6.3'
-        classpath 'com.google.gms:google-services:4.3.2'
+        classpath 'com.google.gms:google-services:4.3.3'
         classpath 'io.fabric.tools:gradle:1.28.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
